updating our details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Currently a science teacher exploring full stack develop to expand my skill set.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Boise, Idaho, however, my family moved around a lot growing up. St. Louis is where I've lived the longest, so I call it home!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to play hockey, nature photography, and anything tech related.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I love teaching, however, I believe I can have more impact as a full stack developer working for an LMS company to help make better tools for teachers.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>An undisclosed location in the St. Louis Region.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love being able to build something and test in real time.  In other industries it can take much longer to build and test.  However, in web development you can make quick changes and test.  It reminds me of when my cousin and I were kids and would see who could build the strongest lego structure and proceed to throw it at a fast spinning ceiling fan and see how long it could last (parents were not happy), but instead of legos, it's code that you can commit and test.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/mcheering">Github</a></li>
         </ul>
     </footer>
 </body>
